fixed wrong color settings

--- a/src/components/m-button/settings/_button.scss
+++ b/src/components/m-button/settings/_button.scss
@@ -32,7 +32,7 @@ $button-color:
       bg--disabled: $color-prim-gray-dusty,
       bg--ghost: transparent,
       bg--ghost--hover: transparent,
-      bg--motion: $color-axa-blue,
+      bg--motion: $color-prim-blue-deep-sapphire,
       bg--motion--hover: $color-prim-blue-deep-sapphire,
       text--motion--hover: $color-prim-white,
     ),
@@ -45,7 +45,7 @@ $button-color:
       bg--disabled: $color-prim-gray-dusty,
       bg--ghost: transparent,
       bg--ghost--hover: transparent,
-      bg--motion: $color-prim-red-burnt-sienna,
+      bg--motion: $color-prim-red-flamingo,
       bg--motion--hover: $color-prim-red-flamingo,
       text--motion--hover: $color-prim-white,
     ),
@@ -58,7 +58,7 @@ $button-color:
       bg--disabled: $color-prim-gray-dusty,
       bg--ghost: transparent,
       bg--ghost--hover: $color-prim-white,
-      bg--motion: transparent,
+      bg--motion: $color-prim-white,
       bg--motion--hover: $color-prim-white,
       text--motion--hover: $color-prim-blue-dark-indigo,
     )
